# Gomoku

./: Cargo.toml
debug/: hot_css.css
libs/backend/: Cargo.toml
libs/backend/src/: board.rs  cross_point.rs  lib.rs  rule_checker.rs  utils.rs
libs/backend/src/tests/: board_test.rs  cross_point_test.rs  mod.rs
libs/bot/: Cargo.toml
src/: gomoku_app.rs  lib.rs  main.rs
